COMP: commenting out questionable line in the converter filter to fix compile error
The functionality seems to be duplicated few lines below, but without the cast issues.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,15 @@
 #-----------------------------------------------------------------------------
 set(MODULE_NAME ModelToLabelMap) # Do not use 'project()'
 
+find_package(VTK REQUIRED)
+include_directories(${VTK_SOURCE_DIR})
+link_directories(${VTK_LIBRARY_DIRS})
+
 #-----------------------------------------------------------------------------
 SEMMacroBuildCLI(
   NAME ${MODULE_NAME}
   LOGO_HEADER ${Slicer_SOURCE_DIR}/Resources/NAMICLogo.h
-  TARGET_LIBRARIES ${ITK_LIBRARIES} vtkIO vtkGraphics
-  EXECUTABLE_ONLY
+  TARGET_LIBRARIES ${ITK_LIBRARIES} vtkIO vtkGraphics ${VTK_LIBRARIES}
   )
 
 #-----------------------------------------------------------------------------
